# mulaco

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  pytest.ini  requirements.txt
config/: batch1.toml  dict.json  dict.toml  lang.test.toml  lang.toml  settings.dev.toml  settings.test.toml  settings.toml  user_dict.test.toml
config/dev/: dict.toml  excels.toml  settings.toml
config/mock/: excels.toml  lang.mock.toml  lang.toml  settings.toml
config/test/: dict.toml  excels.toml  lang.toml  settings.toml
data/src/: ClothingConfig.xlsx  MockData1.xlsx
db/: app.json
doc/: DEV.md  ROADMAP.md
src/mulaco/: cli.py
tests/: conftest.py  test_logger.py  test_tmp.py
tests/api/: test_api_service.py
tests/base/: test_base.py  test_constant.py  test_logger.py  test_scaffold.py
tests/batch/: test_batch_service.py
tests/core/: test_app.py  test_core_service.py  test_db_cell_info.py  test_db_excel_sheet.py  test_db_trans_info.py  test_service.py
tests/db/: test_core_service.py  test_db_cell_info.py  test_db_excel_sheet.py  test_db_service.py  test_db_trans_info.py  test_repo_cell.py  test_repo_exsh.py  test_repo_trans_info.py  test_sql.py
tests/excel/: test_exporter.py  test_handler.py  test_loader.py  test_misc.py  test_model.py
tests/fix/: test_parser.py  test_parser_unit.py  test_post_fix.py  test_post_parser.py  test_pre_fix.py  test_pre_parser.py
tests/models/: test_model_lang.py
tests/translate/: test_api_deepl.py  test_api_local.py  test_api_tencent.py  test_cli_deepl.py  test_cli_local.py  test_cli_mock.py  (+9 more)
(+45 files in other folders)
