[project]
name = "mulaco"
version = "1.0.1"
description = ""
requires-python = ">=3.9,<3.13"
authors = [{ name = "jackylee", email = "jieli.work@qq.com" }]
readme = "README.md"
dependencies = [
    "tinydb (>=4.8.2,<5.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "dataclasses-json (>=0.6.7,<0.7.0)",
    "deepl (>=1.22.0,<2.0.0)",
    "tencentcloud-sdk-python-common (>=3.0.1377,<4.0.0)",
    "tencentcloud-sdk-python-tmt (>=3.0.1377,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "typer (>=0.15.3,<0.16.0)",
    "click (>=8.1,<8.2)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
